2021-11-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): several new
	sections.

2021-11-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new variable.

	* eev-intro.el (find-video-links-intro): added the sections 9, 10,
	and 11.
	(find-windows-beginner-intro): almost totally rewritten.

	* eev-on-windows.el: almost totally rewritten.

2021-11-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eevvideo-1stclass-links): renamed to
	`find-1stclassvideo-links'.

	* eev-videolinks.el (find-eevlocal-video): fixed a typo.

	* eev-tlinks.el (find-eevvideo-1stclass-links): new function.

2021-11-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-use-youtube-videos)
	(ee-use-local-videos): new functions.

	* eev-audiovideo.el (ee-use-find-youtube-video)
	(ee-use-find-eevvideo-links): deleted.

	* eev-tlinks.el (code-eevvideo, find-code-eevvideo)
	(ee-code-eevvideo, code-eevvideo-local)
	(find-code-eevvideo-local, ee-code-eevvideo-local): deleted.

	* eev-videolinks.el (find-code-eev{mod}video)
	(code-eev{mod}video, ee-code-eev{mod}video): new functions.
	(find-code-eevvideo, code-eevvideo): new functions.
	(find-code-eevlocalvideo, code-eevlocalvideo): new functions.
	(find-code-eevlinksvideo, code-eevlinksvideo): new functions.

	* eev-intro.el (find-video-links-intro): new intro.
	(find-videos-intro): deleted the old material.
	(find-audiovideo-intro): small changes in section 4.

	* eev-videolinks.el: new file.
	(ee-find-eev-video-function): new variable.
	(find-eev-video, find-eevyoutube-video, find-eevlocal-video)
	(find-eevlinks-video): new functions.
	(find-eevlocal-links, ee-eevlocal-body)
	(ee-eevlocal-youtube-comment, ee-eevlocal-psne)
	(ee-eevlocal-findmpvvideo): new functions.

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eevnavvideo, find-eevtemplvideo, find-eevfherelvideo)