@@ -1,3 +1,9 @@
+2021-11-13  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-intro.el (find-little-languages-intro): deleted.
+	(find-eev-exercises-intro): new function.
+	(find-eev-intro): mention `(find-eev-exercises-intro)'.
+
 2021-11-10  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-windows-beginner-intro): several new
